# xor

./: README.md
cnf2cnf/: CMakeLists.txt  cnf2cnf.cpp
cnf2xcnf/: CMakeLists.txt  cnf2xcnf.cpp
ec-minisat/: CMakeLists.txt  ManualMakefile
ec-minisat/bin-xor-module/: Settings.hpp  UPXorModule.hpp  erg.cpp  erg.hpp  fud.cpp  fud.hpp  util.cpp  util.hpp  xormodule.cpp  xormodule.hpp
ec-minisat/libxorsat/include/: xorsat.hpp
ec-minisat/libxorsat/src/: Clause.cpp  Clause.hpp  Gauss.cpp  ImplicationGraph.hpp  IntSet.hpp  SolverConsistency.cpp  SolverImplementation.cpp  SolverImplementation.hpp
ec-minisat/minisat/: CMakeLists.txt
ec-minisat/minisat/core/: Main.C  Solver.C  Solver.h  SolverConsistency.C
subst-minisat/: CMakeLists.txt  ManualMakefile
subst-minisat/libxorsat/include/: xorsat.hpp
subst-minisat/libxorsat/src/: Clause.cpp  Clause.hpp  Common.cpp  ImplicationGraph.cpp  ImplicationGraph.hpp  IntSet.hpp  Simplex.h  SolverImplementation.cpp  SolverImplementation.hpp  Split.cpp  UndoStack.cpp  UndoStack.hpp  Variable.cpp  Variable.hpp
subst-minisat/minisat/: CMakeLists.txt
subst-minisat/minisat/core/: Main.C  Solver.C  Solver.h  SolverConsistency.C  SolverTypes.h
translations/: CMakeLists.txt  ec-simulation.cpp  ge-solve.sh  ptables.cpp  ptables2.cpp
up-dsimplex-minisat/: CMakeLists.txt  ManualMakefile
up-dsimplex-minisat/minisat/: CMakeLists.txt
up-dsimplex-minisat/minisat/core/: Main.C  Solver.C  Solver.h  SolverConsistency.C
up-dsimplex-minisat/src/: Cluster.cpp  Cluster.hpp  DSimplex.cpp  DSimplex.hpp  IdMapper.cpp  IdMapper.hpp  Matrix.cpp  MatrixGroup.cpp  MatrixGroup.hpp  Simplex.cc  Split.cpp  Split.hpp  UPXorModule.hpp  util.hpp
up-minisat/: CMakeLists.txt
up-minisat/bin-xor-module/: Settings.hpp  UPXorModule.hpp  bcg.cpp  bcg.hpp  erg.cpp  erg.hpp  fud.cpp  fud.hpp  stats.hpp  timestamp.hpp  util.cpp  xormodule.cpp  xormodule.hpp
up-minisat/libxorsat/include/xorsat/: LazyVector.hpp
up-minisat/libxorsat/src/: Common.hpp  Error.cpp  Gauss.hpp  HidingStack.hpp  ImplicationGraph.cpp  LazyQueue.hpp  Split.hpp  UndoStack.cpp  UndoStack.hpp  Variable.cpp
up-minisat/minisat/: CMakeLists.txt
up-minisat/minisat/core/: Main.C  Solver.C  Solver.h  SolverConsistency.C
xcnf-biconnected/: CMakeLists.txt  xcnf-biconnected.cpp
xcnf-clusters/: CMakeLists.txt  Split.hpp  xcnf-clusters.cpp  xcnf-combine.cpp  xcnf-cut.cpp  xcnf-decompose.cpp  xcnf-decompose2.cpp  xcnf-junction-tree.cpp
xcnf-elim-internal/: CMakeLists.txt  DSimplex.cpp  Matrix.cpp  Matrix.hpp  xcnf-elim-internal.cpp
xcnf-matrix-sizes/: CMakeLists.txt  DSimplex.cpp  DSimplex.hpp  IdMapper.cpp  IdMapper.hpp  Simplex.cc  Simplex.h  xcnf-matrix-sizes.cpp
xcnf-preprocess/: ClauseSet.hs  Generic.hs  Makefile  ParseXorCnf.hs  Preprocess.hs  ShowXorCnf.hs  Verify.hs  XorCnf.hs  XorCnfEqv.hs  XorCnfProp.hs  XorCnfSimplify.hs  XorCnfUnit.hs  XorGauss.hs  XorInternal.hs  XorTernary.hs  main.hs
xcnf-simplify/: CMakeLists.txt  xcnf-simplify.cpp
xcnf2cnf/: CMakeLists.txt  xcnf2cnf.cpp
xcnf3xcnf/: CMakeLists.txt  xcnf3xcnf.cpp
