project(xcnf-matrix-sizes)
cmake_minimum_required( VERSION 2.4.5 )
mark_as_advanced(CMAKE_BACKWARDS_COMPATIBILITY)
set(FLAGS  "-Wall ")
if(CMAKE_BUILD_TYPE MATCHES "debug")
    set(CMAKE_CXX_FLAGS "-g -ggdb ${FLAGS}")
    set(DEBUG 1)
    add_definitions("-DDEBUG -DVERIFY")
    message("Debugging symbols")
else(CMAKE_BUILD_TYPE MATCHES "debug")
#   add_definitions("-DNDEBUG")
    message("No debugging symbols")
endif(CMAKE_BUILD_TYPE MATCHES "debug")

if(CMAKE_BUILD_TYPE MATCHES "profile")
    set(CMAKE_CXX_FLAGS "${FLAGS} -g -ggdb -O2")
    message("Profiling build")
endif(CMAKE_BUILD_TYPE MATCHES "profile")
add_executable(xcnf-matrix-sizes xcnf-matrix-sizes.cpp DSimplex.cpp Matrix.cpp IdMapper.cpp IdMapper.hpp Simplex.cc)    
target_link_libraries(xcnf-matrix-sizes boost_program_options)
