project(xcnf-simplify)
cmake_minimum_required( VERSION 2.4.5 )
mark_as_advanced(CMAKE_BACKWARDS_COMPATIBILITY)
set(FLAGS  "-Wall ")
if(CMAKE_BUILD_TYPE MATCHES "debug")
    set(CMAKE_CXX_FLAGS "-g -ggdb ${FLAGS}")
    set(DEBUG 1)
    add_definitions("-DDEBUG -DVERIFY")
    message("Debugging symbols")
else(CMAKE_BUILD_TYPE MATCHES "debug")
#   add_definitions("-DNDEBUG")
    message("No debugging symbols")
endif(CMAKE_BUILD_TYPE MATCHES "debug")

if(CMAKE_BUILD_TYPE MATCHES "profile")
    set(CMAKE_CXX_FLAGS "${FLAGS} -g -O2 -static")
    message("Profiling build")
endif(CMAKE_BUILD_TYPE MATCHES "profile")
add_executable(xcnf-simplify xcnf-simplify.cpp)
target_link_libraries(xcnf-simplify  boost_program_options)
